<resources>
    <string name="app_name">Blue Kitty Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">@string/app_name</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_cart">Cart</string>
    <string name="main_title_news">News</string>
    <string name="main_title_prom">Promotions</string>

    <string name="product_name">Nazwa</string>
    <string name="product_price_solo">Cena / sztuka</string>
    <string name="product_price">Cena</string>

    <string name="product_amount">Ilość</string>



</resources>